syntax = "proto3";

package orders;
option go_package = "ms/gateway/pb";

service OrderService {
    rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse);
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
}

message Order {
    int32 ID = 1;
    int32 UserId = 2;
    Status Status = 3;
    repeated OrderItem OrderItems = 4;
    float TotalPrice = 5;
}

message OrderItem {
    int32 ID = 1;
    int32 Quantity = 2;
    float UnitPrice = 3;
    int32 ProductId = 4;
}

message CreateOrderRequest {}

message CreateOrderResponse {
    Order Order = 1;
}

message GetOrderByIdRequest {
    int32 ID = 1;
}

message GetOrderByIdResponse {
    Order Order = 1;
}

message GetOrdersRequest {
    int32 Page = 1;
    int32 Limit = 2;
}

message GetOrdersResponse {
    int32 Page = 1;
    int32 Limit = 2;
    int32 Count = 3;
    repeated Order Orders = 4;
}

message UpdateOrderStatusRequest {
    int32 Id = 1;
    Status Status = 2;
}

enum Status {
    UNKNOWN = 0;
    Pending = 1;
    Cancelled = 2;
    Completed = 3;
}

message UpdateOrderStatusResponse {
    Order Order = 1;
}